--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     
-	
+
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -405,35 +405,35 @@
           <div class="col-md-4 d-flex ftco-animate">
 			
           	<div class="blog-entry justify-content-end">
-              <a href="http://127.0.0.1:5500/vid1.html" class="block-20 zoom-effect" style="background-image: url('images/html.png');">
+              <a href="vid1.html" class="block-20 zoom-effect" style="background-image: url('images/html.png');">
               </a>
 
 
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="http://127.0.0.1:5500/vid1.html">Web Development Projects using HTML,CSS</a></h3>
+                <h3 class="heading"><a href="vid1.html">Web Development Projects using HTML,CSS</a></h3>
                 <!-- <p>.</p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="http://127.0.0.1:5500/vid2.html" class="block-20 zoom-effect" style="background-image: url('images/Game.jpg');">
+              <a href="vid2.html" class="block-20 zoom-effect" style="background-image: url('images/Game.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="http://127.0.0.1:5500/vid2.html">Game Development Projects Using Unity</a></h3>
+                <h3 class="heading"><a href="vid2.html">Game Development Projects Using Unity</a></h3>
                 <!-- <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="http://127.0.0.1:5500/vid3.html" class="block-20 zoom-effect" style="background-image: url('images/UI.jpg');">
+              <a href="vid3.html" class="block-20 zoom-effect" style="background-image: url('images/UI.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="http://127.0.0.1:5500/vid3.html">UI designing Projects Using Unity </a></h3>
+                <h3 class="heading"><a href="vid3.html">UI designing Projects Using Unity </a></h3>
                 <!-- <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p> -->
               </div>
             </div>
@@ -506,7 +506,7 @@
 						<h2>Group <span> Projects </span> </h2>
 						<div class="heading"> <h4>  ------------------------------------- </h4>
 						<br>
-						<p><a href="http://127.0.0.1:5500/vid4.html" class="btn btn-primary py-3 px-5">CLick Me</a></p>
+						<p><a href="vid4.html" class="btn btn-primary py-3 px-5">CLick Me</a></p>
 						</div>
 					</div>
 				</div>
