--- a/vid4.html
+++ b/vid4.html
@@ -157,11 +157,11 @@ h5{
     
           <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav nav ml-auto">
-              <li class="nav-item"><a href="http://127.0.0.1:5500/index.html" class="nav-link"><span>Home</span></a></li>
-              <li class="nav-item"><a href="http://127.0.0.1:5500/index.html" class="nav-link"><span>About</span></a></li>
-              <li class="nav-item"><a href="http://127.0.0.1:5500/index.html" class="nav-link"><span>Resume</span></a></li>
-              <li class="nav-item"><a href="http://127.0.0.1:5500/index.html" class="nav-link"><span>Projects</span></a></li>
-              <li class="nav-item"><a href="http://127.0.0.1:5500/index.html" class="nav-link"><span>Contact</span></a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link"><span>Home</span></a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link"><span>About</span></a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link"><span>Resume</span></a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link"><span>Projects</span></a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link"><span>Contact</span></a></li>
             </ul>
           </div>
         </div>
