fix: project list

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 .about-mf .about-img img {
   margin-left: 10px;
 }
-
+.suhaib-img{
+	width: 500px !important;
+	height: 650px !important;
+}
 
 .skill-mf .progress {
   /* background-color: #cde1f8; */
@@ -152,7 +155,7 @@
 	      	<div class="overlay"></div>
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight  order-md-last img"  style="background-image:url(images/IMG_0591-removebg-preview.png);">
+	          	<div class="one-third js-fullheight  order-md-last img suhaib-img"  style="background-image:url(images/IMG_0591-removebg-preview.png);">
 	          	 <div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
