--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 }
 .suhaib-img{
 	width: 500px !important;
-	height: 650px !important;
+	height: 700px !important;
+	right: 5%;
 }
 
 .skill-mf .progress {
