--- a/vid1.html
+++ b/vid1.html
@@ -169,10 +169,11 @@ h5{
       </nav>
 
       <div class="project-section">
+        <div class="circle"></div>
         <div class="parallelogram">
             <section>
               <div class="vid1">
-                <video width="400" height="227" style="border: 1px solid blue;" controls autoplay>
+                <video width="400" height="227" style="border: 1px solid rgb(255, 221, 0);" controls autoplay>
                   <source src="./V.K Hospital _ Home - Brave 2024-06-18 18-42-12.mp4" type="video/mp4">
                   <source src="./V.K Hospital _ Home - Brave 2024-06-18 18-42-12.mp4" type="video/ogg">
                   Your browser does not support HTML video.
@@ -181,10 +182,17 @@ h5{
             </section>
             <section>
               <h2>
-                V.K Hospital website
+                V.K Hospital Website
               </h2>
               <h5>
-                this page ........
+                A professional and user-friendly website for Suhaib Hospital, featuring:,<br>
+
+                ! Home Page: Welcoming hero section with a call-to-action.<br>
+                ! About Us: Overview of the hospital's mission, vision, and history.<br>
+                ! Services: Detailed list of medical services offered.<br>
+                ! Doctors: Profiles of doctors with their specializations and experience.<br>
+                ! Contact: Contact information, address, and a map.<br>
+                  The design employs a clean, professional color scheme and responsive layout for an optimal user experience on all devices.
               </h5>
             </section>
         </div>
