--- a/vid2.html
+++ b/vid2.html
@@ -175,7 +175,14 @@ h5{
 
 </h2>
 <h5>
-  Under Development.... 
+  A professional and user-friendly website for Suhaib Hospital, featuring:,<br>
+
+  ! Home Page: Welcoming hero section with a call-to-action.<br>
+  ! About Us: Overview of the hospital's mission, vision, and history.<br>
+  ! Services: Detailed list of medical services offered.<br>
+  ! Doctors: Profiles of doctors with their specializations and experience.<br>
+  ! Contact: Contact information, address, and a map.<br>
+    The design employs a clean, professional color scheme and responsive layout for an optimal user experience on all devices.
 </h5>
     <div class="vid1">
       <video width="400" height="227" controls autoplay>
@@ -186,6 +193,7 @@ h5{
     </div>
   <div class="layer"></div>
  </div>
+ 
 
  <script src="js/jquery.min.js"></script>
  <script src="js/jquery-migrate-3.0.1.min.js"></script>
